Fixed logo visibility in Navbar by correcting CSS filters

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -124,6 +124,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 45px;
+  height: 45px;
 }
 
 .navbarLogoImg img {
